--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <distributionManagement>
         <repository>
-            <id>nexus-site</id>
+            <id>github</id>
             <url>https://github.com/JuniorWolfgamingDE/PlayerStatus/</url>
         </repository>
     </distributionManagement>
